# backend

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/domains/auth/: docs.py  router.py  schemas.py
app/domains/catalogs/: docs.py  models.py  router.py
app/domains/users/: enums.py  models.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  10a18afeb713_create_users_table.py  ee29ea6fdc06_create_document_types_and_users_tables.py
